name: rethinkdb
version: 1.15.1.0
cabal-version: >=1.8
build-type: Simple
license: Apache
license-file: LICENSE
maintainer: Etienne Laurin <etienne@atnnn.com>
homepage: http://github.com/atnnn/haskell-rethinkdb
synopsis: A driver for RethinkDB 1.15
description:
    A driver for the RethinkDB database server
category: Database
author: Etienne Laurin

source-repository head
    type: git
    location: https://github.com/atnnn/haskell-rethinkdb
 
flag dev
    default: False
    manual: True

library
    build-depends:
        base >=4 && <4.8,
        unordered-containers ==0.2.*,
        text >=0.11 && <1.3,
        aeson >=0.7 && <0.9,
        bytestring ==0.10.*,
        containers ==0.5.*,
        data-default ==0.5.*,
        network >=2.4 && <2.6,
        mtl >=2.1 && <2.3,
        vector ==0.10.*,
        time ==1.4.*,
        utf8-string ==0.3.*,
        binary >=0.5 && <0.8,
        scientific ==0.3.*,
        base64-bytestring ==1.0.*
     
    if flag(dev)
        exposed-modules:
            Debug
        exposed: True
        buildable: True
    exposed-modules:
        Database.RethinkDB
        Database.RethinkDB.NoClash
        Database.RethinkDB.Driver
        Database.RethinkDB.Functions
        Database.RethinkDB.Time
        Database.RethinkDB.Types
        Database.RethinkDB.Datum
        Database.RethinkDB.Geospatial
        Database.RethinkDB.ReQL
        Database.RethinkDB.Network
        Database.RethinkDB.MapReduce
        Database.RethinkDB.Wire
        Database.RethinkDB.Wire.Datum
        Database.RethinkDB.Wire.Frame
        Database.RethinkDB.Wire.Query
        Database.RethinkDB.Wire.Response
        Database.RethinkDB.Wire.Term
        Database.RethinkDB.Wire.VersionDummy
    exposed: True
    buildable: True
    ghc-options: -Wall
    ghc-prof-options: -fprof-auto

test-suite doctests
    build-depends:
        base,
        doctest >=0.9
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    buildable: True
    ghc-options: -threaded

benchmark bench
    build-depends:
        base,
        criterion,
        rethinkdb,
        text,
        aeson
    hs-source-dirs: bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
    ghc-prof-options: -fprof-auto "-with-rtsopts=-p -s -h -i0.1 -N"
